07-istio/timeout/app-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
  - myapp
  http:
  - route:
    - destination:
        host: myapp
        subset: v1
      weight: 95

    - destination:
        host: myapp
        subset: v2
      weight: 5
    timeout: 0.001s
